test/ui/lowering/let-in-without-definition.stderr
error[E012]: the let-binding ‘x’ does not have a body
  ┌─ ${TEST_FOLDER}/lowering/let-in-without-definition.lushui:1:14
  │
1 │ foo = let x f in 0
  │             ⟫⟪ missing definition
  │
 help: provide a definition for the let-binding
  ┌─ ${TEST_FOLDER}/lowering/let-in-without-definition.lushui:1:14
  │
1 │ foo = let x f = value in 0
  │              ~~~~~~~~

error: aborting due to previous error

